# zrive-ds-JTC

./: .gitignore  pyproject.toml
src/module_1/: module_1_meteo_api.py  pruebas.ipynb
src/module_2/: module_2_EDA.ipynb
src/module_3/: module_3.ipynb
src/module_4/: custom_model.py  fit.py  fit_predict.ipynb  functions.py  module_4.ipynb  module_4.py  predict.py
src/module_4/models/: LogisticRegression_push_2025_11_03-1306.pkl  XGBClassifier_push_2025_11_03-1406.pkl
src/module_7/src/: app.py  module_7.ipynb
src/module_7/src/basket_model/: basket_model.py  exceptions.py
src/module_7/src/basket_model/utils/: features.py
src/production_api/src/basket_model/: feature_store.py
src/production_api/src/basket_model/utils/: loaders.py
